# poste.nvim

./: .luacheckrc  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
.opencode/skills/poste-arch-review/: SKILL.md
.opencode/skills/poste-neovim-performance/: SKILL.md
.opencode/skills/poste-refactor/: SKILL.md
crates/poste-cli/: Cargo.toml  build.rs
crates/poste-cli/src/: connection.rs  context.rs  fmt.rs  import.rs  introspect.rs  main.rs  resolve.rs  run.rs  serve.rs  util.rs
crates/poste-cli/tests/: cli_context_serve.rs
crates/poste-core/: Cargo.toml
crates/poste-core/src/: env.rs  formatter.rs  importer.rs  lib.rs  request.rs  sql_parser.rs
crates/poste-core/src/formatter/: tests.rs
crates/poste-core/src/import/: mod.rs  openapi.rs  postman.rs  swagger.rs  tests.rs
crates/poste-core/src/parser/: mod.rs  vars.rs
crates/poste-core/src/sql_context/: context.rs  detectors.rs  functions.rs  mod.rs  scanner.rs  scope.rs  statements.rs  tables.rs  tests.rs  tokenizer.rs
crates/poste-core/tests/: sql_context_golden.rs
crates/poste-core/tests/fixtures/sql_context/: basic_select.json  cte_subquery_scope.json  ddl.json  dialect_mysql.json  dialect_postgres.json  dialect_sqlite.json  directives.json  dml_insert_update_delete.json  dot_context.json  special_statements.json  statement_boundaries.json  strings_comments.json  where_complex.json
crates/poste-exec/: Cargo.toml
crates/poste-exec/src/: cookie_jar.rs  executor.rs  lib.rs  mime.rs  redis.rs  response.rs  sql_connection.rs  sql_ddl.rs  sql_dialect.rs
crates/poste-exec/src/sql_executor/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  value.rs
crates/poste-exec/src/sql_introspect/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
lua/poste/: buffer_setup.lua  cli.lua  constants.lua  core.lua  error.lua  help.lua  indicators.lua  install.lua  select.lua  state.lua  util.lua
lua/poste/async/: promise.lua
lua/poste/state/: event.lua
plugin/: poste-core.lua
