[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/beyondlex/poste"
description = "Multi-protocol request executor: HTTP, SQL, Redis, MongoDB, AMQP — from your editor"
authors = ["Lex <lex@beyondlex.com>"]
readme = "README.md"

[workspace.dependencies]
poste-core = { path = "crates/poste-core", version = "0.1.0" }
poste-exec = { path = "crates/poste-exec", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
openapiv3 = "2.0"
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "json", "chrono", "uuid", "ipnetwork", "rust_decimal"] }
rust_decimal = "1"
