[package]
name = "poste-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core parsing, SQL context detection, and environment logic for Poste"
keywords = ["http", "rest-client", "sql", "redis", "request"]
categories = ["command-line-utilities", "parser-implementations"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
uuid.workspace = true
chrono.workspace = true
rand.workspace = true
openapiv3.workspace = true
serde_yaml.workspace = true
